Header and logo added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div>
-  This is the header
-</div>
+<header>
+  <a routerLink="/"><img src="../../../assets/icons/logo2x.png" id="logo"/></a>
+</header>
 
 
 <router-outlet></router-outlet>
