--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,6 @@
   color: #0058c3;
   /*overflow: hidden;*/
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
