Map working with hardcoded values. DataService file created

--- a/src/app/modules/results/results-main/results-main.component.css
+++ b/src/app/modules/results/results-main/results-main.component.css
@@ -48,3 +48,6 @@ section {
 /**************************START RESULTS SECTION*******************/
 
 /**************************END RESULTS SECTION*******************/
+#mapContainer {
+  height: 700pt;
+}
