--- a/src/app/modules/results/results-main/results-main.component.html
+++ b/src/app/modules/results/results-main/results-main.component.html
@@ -163,8 +163,7 @@
   </section>
 
 
-  <section class="col-lg-4" id="mapContainer">
-
+  <section #resultsMap class="col-lg-4" id="mapContainer">
   </section>
 
 
