--- a/src/app/modules/results/result-item/result-item.component.html
+++ b/src/app/modules/results/result-item/result-item.component.html
@@ -6,10 +6,10 @@
       <h4>Specialty: <span>{{specialty}}</span></h4>
       <span>{{address}}</span>
       <div>
-        <span>Phone: {{phone}}</span>
-        <span>Email: {{email}}</span>
-        <span>Web: <a href="{{websiteUrl}}" [target]="website">{{website}}</a></span>
-        <span>Gender: {{gender}}</span>
+        <span><span>Phone:</span> {{phone}}</span>
+        <span><span>Email:</span> {{email}}</span>
+        <span><span>Web: </span> <a href="{{websiteUrl}}" [target]="website">{{website}}</a></span>
+        <span><span>Gender:</span> {{gender}}</span>
       </div>
     </div>
   </div>
@@ -30,7 +30,10 @@
       </ul>
 
     </div>
-    <div class="col-md-8 table border-left" style="border-collapse: separate; border-spacing: 1em;">
+    <div class="col-md-8 table border-left workHours" style="border-collapse: separate; border-spacing: 1em;">
+      <div class="d-sm-table-row">
+        <span class="res-item-title">Office Timings</span>
+      </div>
       <div class="d-sm-table-row">
         <p class="d-sm-table-cell border-right" style="padding-right: 10pt">MON <br>8:00 AM - 3:30 PM</p>
         <p class="d-sm-table-cell border-right" style="padding-right: 10pt">TUE <br>8:00 AM - 3:30 PM</p>
