hover effect and result item click event done

--- a/src/app/modules/results/result-item/result-item.component.css
+++ b/src/app/modules/results/result-item/result-item.component.css
@@ -106,3 +106,7 @@ li > h4 {
 .workHours {
   border-spacing: 6pt!important;
 }
+.resultItemHoverable:hover {
+  cursor: pointer;
+  background-color: rgba(228, 240, 250, 0.42);
+}
